crates/walrus-semantics/snapshots/infer/if_then_else.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_var: {},
    type_of_expr: {
        0: Primitive(
            Bool,
        ),
        1: Primitive(
            Int,
        ),
        2: Primitive(
            Int,
        ),
        3: Primitive(
            Int,
        ),
        4: Primitive(
            Int,
        ),
        5: Primitive(
            Int,
        ),
        6: Primitive(
            Int,
        ),
    },
    type_of_type: {
        0: Primitive(
            Int,
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Primitive(
                Int,
            ),
        },
    },
    diagnostics: [],
}
