crates/walrus-semantics/snapshots/infer/infer_ret_type.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_var: {},
    type_of_expr: {
        0: Tuple(
            [],
        ),
    },
    type_of_type: {
        0: Tuple(
            [],
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Tuple(
                [],
            ),
        },
    },
    diagnostics: [],
}
