crates/walrus-semantics/snapshots/infer/int_lit.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_expr: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Int,
        ),
    },
    type_of_type: {
        0: Primitive(
            Int,
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Primitive(
                Int,
            ),
        },
    },
    diagnostics: [],
}
