crates/walrus-semantics/snapshots/infer/lambda_call.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_expr: {
        0: App {
            ctor: Int,
            params: [],
        },
        1: App {
            ctor: Fn,
            params: [
                App {
                    ctor: Int,
                    params: [],
                },
                App {
                    ctor: Int,
                    params: [],
                },
            ],
        },
        2: App {
            ctor: Fn,
            params: [
                App {
                    ctor: Int,
                    params: [],
                },
                App {
                    ctor: Int,
                    params: [],
                },
            ],
        },
        3: App {
            ctor: Int,
            params: [],
        },
        4: App {
            ctor: Int,
            params: [],
        },
        5: App {
            ctor: Int,
            params: [],
        },
    },
    type_of_type: {
        0: App {
            ctor: Int,
            params: [],
        },
    },
    type_of_pat: {
        0: App {
            ctor: Fn,
            params: [
                App {
                    ctor: Int,
                    params: [],
                },
                App {
                    ctor: Int,
                    params: [],
                },
            ],
        },
        1: App {
            ctor: Int,
            params: [],
        },
    },
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App {
                ctor: Int,
                params: [],
            },
        },
    },
    diagnostics: [],
}
