crates/walrus-semantics/snapshots/infer/lambda_return_int.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_expr: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Never,
        ),
        2: Fn(
            FnType {
                params: [],
                ret: Primitive(
                    Int,
                ),
            },
        ),
        3: Fn(
            FnType {
                params: [],
                ret: Primitive(
                    Int,
                ),
            },
        ),
    },
    type_of_type: {
        0: Fn(
            FnType {
                params: [],
                ret: Primitive(
                    Int,
                ),
            },
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Fn(
                FnType {
                    params: [],
                    ret: Primitive(
                        Int,
                    ),
                },
            ),
        },
    },
    diagnostics: [],
}
