crates/walrus-semantics/snapshots/infer/loop_never.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types
---
InferenceResult {
    type_of_expr: {
        0: App(
            TypeApp {
                ctor: Tuple,
                params: [],
            },
        ),
        1: App(
            TypeApp {
                ctor: Never,
                params: [],
            },
        ),
        2: App(
            TypeApp {
                ctor: Never,
                params: [],
            },
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App(
                TypeApp {
                    ctor: Never,
                    params: [],
                },
            ),
        },
    },
    diagnostics: [],
}
